--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,7 +18,7 @@ body, html {
 
 #mainSection {
   height: 980px;
-  background-image: url("https://initiate.alphacoders.com/images/100/cropped-2560-1440-1007350.jpg?5237");
+  background-image: url("../images/background-image.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -140,12 +140,11 @@ body, html {
   padding: 5px;
 }
 .flex-containter .box-2 {
-  color: #e4dcdcee;
+  color: #fdfdfdee;
   text-transform: uppercase;
   font-weight: lighter;
   letter-spacing: 0.2rem;
-  font-size: 1.2rem;
-  margin: 5px;
+  font-size: 1.5rem;
 }
 
 nav > ul > li > a {
@@ -222,9 +221,9 @@ nav > ul > li > a {
   flex-direction: row;
 }
 #aboutmeSection .flex-section .about-me-section .photo-section .photo-frame {
-  width: 350px;
+  width: 300px;
   background-image: url("../images/profile-picture.jpg");
-  height: 350px;
+  height: 300px;
   border: 5px solid white;
   background-size: cover;
   box-shadow: 1px 1px 7px gray;
@@ -285,10 +284,9 @@ nav > ul > li > a {
 #projectsSection {
   background-color: white;
   align-items: center;
-  justify-content: center;
   display: flex;
-  height: 930px;
-  margin-bottom: 50px;
+  height: 600px;
+  padding-top: 60px;
   flex-direction: column;
 }
 #projectsSection .project-flexbox {
@@ -300,8 +298,8 @@ nav > ul > li > a {
   flex-direction: row;
 }
 #projectsSection .project-flexbox .project-box {
-  height: 300px;
-  width: 300px;
+  height: 200px;
+  width: 200px;
   margin: 10px;
   opacity: 0;
   position: relative;
@@ -500,7 +498,7 @@ nav > ul > li > a {
   }
 }
 @media (min-width: 651px) and (max-width: 900px) {
-  .flex-containter {
+  #mainSection .flex-containter {
     text-align: center;
     width: 100%;
   }
