--- a/sass/style.sass
+++ b/sass/style.sass
@@ -294,11 +294,13 @@ nav > ul > li > a
         flex-direction: row
 
         .project-box
-            height: 200px
-            width: 200px
+            height: 145px
+            width: 145px
             margin: 10px
             opacity: 0
+            box-shadow: 0px 0px 19px -5px #000000
             position: relative
+            transition: transform 0.3s ease-in-out
 
         .overlay
             position: fixed 
@@ -312,12 +314,15 @@ nav > ul > li > a
             background-color: rgba(0,0,0,0.5)
             z-index: 2
             cursor: pointer
+
         .project-box img
             width: 100%
             height: 100%
 
         .project-box:hover
             cursor: pointer
+            transform: scale(1.2,1.2)
+            
 
 #contactSection
     height: 450px
